# scoop-watch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
examples/orbitall/: config.yaml  layout.md  project.md
src/scoop_watch/: __init__.py  author.py  authoring_primer.md  cli.py  config.py  example_project.md  fetch.py  models.py  paths.py  reading.py  scaffold.py  scheduler.py  scheduler_linux.py  scheduler_macos.py  synthesis.md  synthesis_deep.md  synthesis_deep_merge.md  synthesize.py  synthesize_deep.py  tips.py  ui.py  uninstaller.py  updater.py  wizard.py
src/scoop_watch/templates/: config.yaml  layout.md  project.md
tests/scoop_watch/: test_author.py  test_cli.py  test_config.py  test_fetch.py  test_fetch_deep.py  test_merge_deep.py  test_models.py  test_paths.py  test_reading.py  test_scaffold.py  test_scheduler.py  test_scheduler_macos.py  test_synthesize.py  test_synthesize_deep.py  test_ui.py  test_uninstaller.py  test_updater.py
